--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
